--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="header">
       <i class="fa-solid fa-comment-dots"></i>
       Hello, Nice to meet You! <br />
-      whatever you want, Write & Enter!
+      whatever you want, Write & Enter
       <i class="fa fa-spinner fa-pulse fa-fw"></i>
     </header>
     <div class="header-con">
