--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <i class="fa fa-spinner fa-pulse fa-fw"></i>
     </header>
     <div class="header-con">
-      <img class="robot" src="/img/logo.png" alt="robot" />
+      <img class="robot" src="./img/logo.png" alt="robot" />
       <h1>Chatbot</h1>
     </div>
     <div id="container" class="container">
