--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chatBot</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/ddf76d6ed0.js"
       crossorigin="anonymous"
@@ -36,6 +36,6 @@
       </div>
     </div>
   </body>
-  <script src="/main.js"></script>
-  <script src="/response.js"></script>
+  <script src="./main.js"></script>
+  <script src="./response.js"></script>
 </html>
